Robotics/.metadata/.plugins/org.eclipse.cdt.ui/Expo-bot-with-binaries.build.log
13:31:36 **** Incremental Build of configuration Debug for project Expo-bot-with-binaries ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\ankbh/wpilib/cpp/current/include" "-IC:\\Users\\ankbh\\Robotics\\Expo-bot-with-binaries\\src" "-IC:\\Users\\ankbh/wpilib/user/cpp/include" -O0 -Og -g3 -Wall -c -fmessage-length=0 -o "src\\Commands\\ShootBall.o" "..\\src\\Commands\\ShootBall.cpp" 
In file included from C:\Users\ankbh\Robotics\Expo-bot-with-binaries\src/Commands/../Subsystems/Winch.h:6:0,
                 from C:\Users\ankbh\Robotics\Expo-bot-with-binaries\src/Commands/../CommandBase.h:5,
                 from C:\Users\ankbh\Robotics\Expo-bot-with-binaries\src/Commands/ShootBall.h:4,
                 from ..\src\Commands\ShootBall.cpp:1:
C:\Users\ankbh\Robotics\Expo-bot-with-binaries\src/Commands/MoveWinch.h:6:38: error: expected class-name before '{' token
 class MoveWinch : public CommandBase {
                                      ^
..\src\Commands\ShootBall.cpp: In member function 'virtual void ShootBall::Execute()':
..\src\Commands\ShootBall.cpp:16:23: error: 'class OI' has no member named 'getShootButton'
  bool getButton = oi->getShootButton()->Get();
                       ^

13:31:39 Build Finished (took 2s.873ms)

